Add request logging
This adds the LoggingFeature to the Jersey ResourceConfig, which allows
sideband implementors to see the smart-hub-application incoming
requests.

Reviewer: Andrew Giorgio
Reviewer: Morgan Patch
Reviewer: Ryan Jones

JiraIssue: NA

Product: broker

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ default:
   services:
     - name: "docker:18.09-dind"
   tags:
-    - k8s
+    - pdg-sideband-test-environment
 
 variables:
   DOCKER_HOST: "tcp://localhost:2375"
