Remove references to console in README.md
Since the console was removed from the customer facing
docker-compose.yml file, references to it in the README.md were removed
to prevent confusion. In addition, the curl command was updated to use
the long form argument for --header.

--- a/smart-hub-application/Dockerfile
+++ b/smart-hub-application/Dockerfile
@@ -2,9 +2,11 @@ FROM maven:3.6.3-openjdk-11 AS build-env
 
 COPY . /app
 WORKDIR /app
-RUN mvn clean package
+RUN mvn clean package -Prun -DskipTests
 
 FROM openjdk:11
+COPY ./hub.json /app/hub.json
+COPY ./config.yml /app/config.yml
+COPY --from=build-env /app/target/smart-hub-application-1.0.0-SNAPSHOT.jar /app/smart-hub.jar
 WORKDIR /app
-COPY --from=build-env /app /app/
-CMD java -jar target/smart-hub-application-1.0.0-SNAPSHOT.jar server config.yml
+CMD java -jar ./smart-hub.jar server ./config.yml
