Add comment headers to script files
This adds comment headers to the script files in the repository,
providing script descriptions and example usages. It also adds the
.support/use-external-pdp.sh script for maintainers to easily use the
external PDP provided in .support/docker-compose.yml.

--- a/.support/docker-compose.yml
+++ b/.support/docker-compose.yml
@@ -1,3 +1,5 @@
+# You should not need to modify this file. Please modify the variables in your .env file instead. The env-template.txt
+# file contains an example .env file with default values pre-populated.
 version: "2.4"
 
 services:
