--- a/.support/docker-compose.yml
+++ b/.support/docker-compose.yml
@@ -12,7 +12,6 @@ services:
       - SERVER_PROFILE_PATH=server-profiles/pingdatagovernance
       - SERVER_PROFILE_BRANCH=${PDG_SIDEBAND_PROFILE_BRANCH:-main}
       - PDG_SIDEBAND_REQUEST_CONTEXT_METHOD=${PDG_SIDEBAND_REQUEST_CONTEXT_METHOD:-state}
-      - PDG_SIDEBAND_PAP_PORT=${PDG_SIDEBAND_PAP_PORT:-8443}
     env_file:
       - ${HOME}/.pingidentity/devops
     ports:
@@ -31,6 +30,7 @@ services:
       - SERVER_PROFILE_URL=${PDG_SIDEBAND_PROFILE_URL:-https://github.com/pingidentity/pdg-sideband-test-environment.git}
       - SERVER_PROFILE_PATH=server-profiles/pingdatagovernancepap
       - SERVER_PROFILE_BRANCH=${PDG_SIDEBAND_PROFILE_BRANCH:-main}
+      - PING_EXTERNAL_BASE_URL=${PDG_SIDEBAND_PAP_HOSTNAME}:${PDG_SIDEBAND_PAP_PORT}
       - HTTPS_PORT=8443
     env_file:
       - ${HOME}/.pingidentity/devops
